--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -11,9 +11,8 @@
   box-shadow: 0px 2px 6px 0px rgba(14, 104, 249, 0.3);
   text-align: center;
   font-size: 14px;
-  font-family: Roboto-Regular;
   font-weight: normal;
-  border: 1px solid rgb(249, 250, 252);
+  border: none;
   cursor: pointer;
   margin: 12px;
   align-self: center;
