--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,14 @@
-.App {
-  display:flex;
+.list {
+  display: flex;
   flex-direction: column;
+  margin: 0 48px;
+  padding: 24px;
+}
+
+.empty-list {
+  border: 1px solid rgb(231, 235, 239);
+  box-shadow: 0px 4px 6px 0px rgba(191, 200, 213, 0.5);
+  border-radius: 6px;
+  padding: 16px;
+  margin: 0 auto;
 }
