Reorder questions qith index, clear input after submit

--- a/src/views/QuestionaireForm/components/AnswerInput/AnswerInput.module.css
+++ b/src/views/QuestionaireForm/components/AnswerInput/AnswerInput.module.css
@@ -3,6 +3,13 @@
   align-items: baseline;
   border-bottom: 1px solid rgb(203, 203, 203);
   background-color: rgb(255, 255, 255);
+  padding: 0 8px;
+}
+.answer:focus,
+.answer:focus-visible,
+.answer:focus-within {
+  outline: none;
+  border-bottom: 1px solid rgb(14, 104, 249);
 }
 .answer-id {
   color: rgb(143, 152, 169);
@@ -13,19 +20,18 @@
 
 }
 
-.answer-input:focus,
+.answer-input.answer,
 .answer-input:focus-visible,
 .answer-input:focus-within {
   outline: none;
-  border-bottom: 1px solid rgb(14, 104, 249);
 }
 
 .answer-actions {
   background-color: rgb(255, 255, 255);
-
   display: flex;
   width: 15%;
   justify-content: space-around;
+  margin-right: 8px;
 }
 .icon {
   cursor: pointer;
