--- a/src/views/QuestionaireForm/components/AnswerInput/AnswerInput.module.css
+++ b/src/views/QuestionaireForm/components/AnswerInput/AnswerInput.module.css
@@ -37,3 +37,9 @@
   cursor: pointer;
   color: rgb(92, 103, 118);
 }
+
+.icon-disabled {
+  opacity: 0.6;
+  pointer-events: none;
+  cursor: not-allowed;
+}
