--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,8 +1,8 @@
 .list {
   display: flex;
   flex-direction: column;
-  margin: 0 48px;
-  padding: 24px;
+  margin: 0;
+  padding: 6px;
 }
 
 .empty-list {
@@ -11,4 +11,18 @@
   border-radius: 6px;
   padding: 16px;
   margin: 0 auto;
+}
+
+@media (min-width: 480px) {
+  .list {
+    margin: 0 12px;
+    padding: 12px;
+  }
+}
+
+@media (min-width: 768px) {
+  .list {
+    margin: 0 48px;
+    padding: 24px;
+  }
 }
