--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -17,5 +17,10 @@
 }
 
 .btn:hover {
-  background-color: rgb(0, 96, 252);
+  background-color: rgb(0 96 252 / 71%);
+}
+
+.btn:disabled {
+  background-color: rgb(14 104 249 / 47%);
+  cursor: not-allowed;
 }
